--- a/package.json
+++ b/package.json
@@ -37,9 +37,8 @@
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
-    "typescript": "^4.4.4"
-  },
-  "dependencies": {
+    "typescript": "^4.4.4",
+    "@chainlink/contracts": "^0.3.0",
     "axios": "^0.24.0"
   }
 }
